[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Stefan Kuznetsov <neosloth@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
python-lsp-server = "^1.6.0"
python-lsp-black = "^1.2.1"
pyls-isort = "^0.2.2"
isort = "^5.10.1"
pylsp-mypy = "^0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
